src/objects/Web_Portal_Contact_Citizenship__c/Web_Portal_Contact_Citizenship__c.object-meta.xml
<CustomObject>
    <description>For honeywell traing webportal tool contact citizenship information</description>
    <label>Web Portal Contact Citizenship</label>
    <nameField>
        <label>Birth City</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Portal Contact Citizenships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>