src/objects/Web_Portal_Contact_Citizenship__c/fields/Address_Line_1_c__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1_c__c</fullName>
    <label>Company Address Line 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>