src/objects/Web_Portal_Contact_Citizenship__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Company Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>