src/objects/Web_Portal_Contact_Citizenship__c/fields/Alternate_Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Work_Number__c</fullName>
    <description>For updating of additional information in honeywell trainig</description>
    <label>Alternate Work Number</label>
    <type>Phone</type>
</CustomField>