src/objects/Web_Portal_Contact_Citizenship__c/fields/Birth_city__c.field-meta.xml
<CustomField>
    <fullName>Birth_city__c</fullName>
    <label>Birth city</label>
    <length>50</length>
    <type>Text</type>
</CustomField>