src/objects/Web_Portal_Contact_Citizenship__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SR#450380</description>
    <label>Class Name</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Web Portal Contact Citizenships</relationshipLabel>
    <relationshipName>Web_Portal_Contact_Citizenships</relationshipName>
    <type>Lookup</type>
</CustomField>