src/objects/Web_Portal_Contact_Citizenship__c/fields/Company_E_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_E_Mail_Address__c</fullName>
    <label>Primary Email Address</label>
    <type>Email</type>
</CustomField>