src/objects/Web_Portal_Contact_Citizenship__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Web Portal Contact Citizenships</relationshipLabel>
    <relationshipName>Web_Portal_Contact_Citizenships</relationshipName>
    <type>Lookup</type>
</CustomField>