src/objects/Web_Portal_Contact_Citizenship__c/fields/Do_you_own_Operate_or_Maintain_Honeywell__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_Operate_or_Maintain_Honeywell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you own,Operate or Maintain Honeywell</label>
    <type>Checkbox</type>
</CustomField>