src/objects/Web_Portal_Contact_Citizenship__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Secondary Email address</label>
    <type>Email</type>
</CustomField>