src/objects/Web_Portal_Contact_Citizenship__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>