src/objects/Web_Portal_Contact_Citizenship__c/fields/Is_US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defines if the current Contact is a USA Citizen.</inlineHelpText>
    <label>Is US Citizen</label>
    <type>Checkbox</type>
</CustomField>