src/objects/Web_Portal_Contact_Citizenship__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>For updating contact information for honeywell traing</description>
    <inlineHelpText>Enter Jobtitle</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>