src/objects/Web_Portal_Contact_Citizenship__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Transport</fullName>
            </value>
            <value>
                <fullName>Business Aviation</fullName>
            </value>
            <value>
                <fullName>General Aviation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Helicopters</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Non-Aerospace</fullName>
            </value>
            <value>
                <fullName>Regional Transport</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>