src/objects/Web_Portal_Contact_Citizenship__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>