src/objects/Web_Portal_Contact_Citizenship__c/fields/Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_Date__c</fullName>
    <description>For honeywell traing contact addition information for honeywell traing webtool</description>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>