src/objects/Web_Portal_Contact_Citizenship__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>For contact citizenship additional information</description>
    <inlineHelpText>passport number</inlineHelpText>
    <label>Passport Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>