src/objects/Web_Portal_Contact_Citizenship__c/fields/Phone_1_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Ext__c</fullName>
    <label>Primary Work Number Ext</label>
    <length>25</length>
    <type>Text</type>
</CustomField>