src/objects/Web_Portal_Contact_Citizenship__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>