src/objects/Web_Portal_Contact_Citizenship__c/fields/Primary_Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Number__c</fullName>
    <label>Primary Work Number</label>
    <type>Phone</type>
</CustomField>