src/objects/Web_Portal_Contact_Citizenship__c/fields/Record_Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Data_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record Data Owner is business process data owner responsible to review/approve record for removal or retention.</description>
    <inlineHelpText>Record Data Owner is business process data owner responsible to review/approve record for removal or retention.</inlineHelpText>
    <label>Record Data Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Web Portal Contact Citizenships</relationshipLabel>
    <relationshipName>Web_Portal_Contact_Citizenships</relationshipName>
    <type>Lookup</type>
</CustomField>