src/objects/Web_Portal_Contact_Citizenship__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <label>State Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>