src/objects/Web_Portal_Contact_Citizenship__c/fields/Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Visa_Number__c</fullName>
    <label>Visa Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>