src/objects/Web_Portal_Contact_Citizenship__c/fields/Web_Additional_form_flag__c.field-meta.xml
<CustomField>
    <fullName>Web_Additional_form_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Additional form flag</label>
    <type>Checkbox</type>
</CustomField>