src/objects/Web_Portal_Contact_Citizenship__c/fields/Web_Portal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>